--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@keyframes slide {
+  from {
+    transform: translateX(200rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
 html {
   background: #1d976c; /* fallback for old browsers */
   background: -webkit-linear-gradient(
@@ -10,36 +20,6 @@ html {
     #93f9b9,
     #1d976c
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-@keyframes rotate {
-  from {
-    transform: rotateY(0deg);
-  }
-  to {
-    transform: rotateY(360deg);
-  }
-}
-
-.logo {
-  width: 40rem;
-  margin: 4rem auto 6rem;
-  display: block;
-}
-
-.intro__logo {
-  width: 20rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-
-  animation-name: rotate;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-
-  perspective: 500;
 }
 
 .app {
@@ -66,6 +46,10 @@ html {
   gap: 2rem;
 }
 
+.content.slide {
+  animation: slide 1s;
+}
+
 .score {
   align-self: center;
   min-width: 20rem;
@@ -82,7 +66,9 @@ html {
 }
 
 button {
-  font-size: 2rem;
+  font-family: inherit;
+  letter-spacing: 2px;
+  font-size: 3.2rem;
   background-color: #222;
   color: #eee;
   padding: 1rem 2rem;
