--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -13,6 +13,10 @@
   z-index: 100;
 }
 
+.card.slide:last-child {
+  animation: slide 1s;
+}
+
 .card__back-logo {
   width: 21rem;
   translate: -12% 0;
